// Vitest Snapshot v1

exports[`Basic tests > Get cats navigation > basic-navigation-cats 1`] = `
[
  {
    "children": [
      {
        "draft": false,
        "id": "content:cats:index.md",
        "partial": false,
        "slug": "/cats",
        "title": "Cats list",
      },
      {
        "draft": false,
        "id": "content:cats:persian.md",
        "partial": false,
        "slug": "/cats/persian",
        "title": "Persian",
      },
      {
        "draft": false,
        "id": "content:cats:ragdoll.md",
        "partial": false,
        "slug": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "id": "content:cats:index.md",
    "slug": "/cats",
    "title": "Cats list",
  },
]
`;

exports[`Basic tests > Get cats navigation > basic-navigation-dogs 1`] = `
[
  {
    "children": [
      {
        "draft": false,
        "id": "content:dogs:bulldog.md",
        "partial": false,
        "slug": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "draft": false,
        "id": "content:dogs:German Shepherd.md",
        "partial": false,
        "slug": "/dogs/German Shepherd",
        "title": "German Shepherd",
      },
    ],
    "slug": "/dogs",
    "title": "Dogs",
  },
]
`;

exports[`Basic tests > Get contents index > basic-index-body 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Index",
        },
      ],
      "props": {
        "class": "d-heading-title",
        "id": "index",
      },
      "tag": "prose-h1",
      "type": "element",
    },
  ],
  "toc": {
    "depth": 2,
    "links": [],
    "searchDepth": 2,
    "title": "",
  },
  "type": "root",
}
`;

exports[`Basic tests > Get navigation > basic-navigation 1`] = `
[
  {
    "children": [
      {
        "draft": false,
        "id": "content:index.md",
        "partial": false,
        "slug": "/",
        "title": "Index",
      },
    ],
    "id": "content:index.md",
    "slug": "/",
    "title": "Index",
  },
  {
    "children": [
      {
        "draft": false,
        "id": "content:dogs:bulldog.md",
        "partial": false,
        "slug": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "draft": false,
        "id": "content:dogs:German Shepherd.md",
        "partial": false,
        "slug": "/dogs/German Shepherd",
        "title": "German Shepherd",
      },
    ],
    "slug": "/dogs",
    "title": "Dogs",
  },
  {
    "children": [
      {
        "draft": false,
        "id": "content:cats:index.md",
        "partial": false,
        "slug": "/cats",
        "title": "Cats list",
      },
      {
        "draft": false,
        "id": "content:cats:persian.md",
        "partial": false,
        "slug": "/cats/persian",
        "title": "Persian",
      },
      {
        "draft": false,
        "id": "content:cats:ragdoll.md",
        "partial": false,
        "slug": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "id": "content:cats:index.md",
    "slug": "/cats",
    "title": "Cats list",
  },
]
`;
